--- a/syllabus/index.html
+++ b/syllabus/index.html
@@ -102,7 +102,7 @@ one = 1 two = 2 print(one &#43; two) See how easy that was? You just entered som
 </span></span></code></pre></div><p>See how easy that was? You just entered some python code into a coding environment powered by a version of the Python language. When we run code on our machines, we have to have a &lsquo;kernel&rsquo; that understands the language we are using and can translate it so that our computer&rsquo;s resources can do the thing you&rsquo;ve specified. In this course, we will use the Python and R languages for the most part.</p>
 <p>Installing Python and R can be a bit of a nuisance though, since there are so many of you and so many different computers y&rsquo;all might have. We will be using, for parts of the course, an online version (with some reduced functionality) that uses your browser&rsquo;s computing resources. Later in the course, when you are comfortable with the idea of &lsquo;computational notebooks&rsquo; and installing bits and bobs, I&rsquo;ll get you set up with a much more powerful approach.</p>
 <div class="admonition admonition-success"><div class="admonition-title">Onwards!</div><div class="admonition-content">
-    Ok. Let&rsquo;s move onto <a href="syllabus-2">the next bit</a>.
+    Ok. Let&rsquo;s move onto <a href="syllabus-2">the general philosophical underpinnings of this course</a>.
   </div>
 </div>
 <style>
