--- a/syllabus/syllabus-2/index.html
+++ b/syllabus/syllabus-2/index.html
@@ -9,10 +9,8 @@
 <meta property="og:url" content="https://shawngraham.github.io/digiarch/syllabus/syllabus-2/">
   <meta property="og:site_name" content="CLCV3000|HIST3000A: An Introduction to Digital Archaeology">
   <meta property="og:title" content="General Philosophy">
-  <meta property="og:description" content="The Most Important Idea Archaeology’s genesis was in racism, and colonialism.
-Digital technology’s birth was in the violence of war, and the control of systems.
-If you put those two things together without taking into account the implications then we’re in for a lot of trouble.
-So what I want to know is, can digital archaeology be taught, be learned, be practiced, in such a way that we unpick those two trajectories, those two monstrous births, and use digital archaeology to better understand communities, empower people, and give better, more compelling, more truthful stories about what it means to be human?">
+  <meta property="og:description" content="The Most Important Idea \draft\
+Archaeology isn’t necessarily about the past. It’s about the materiality of the past and present and in many ways, the future. We try to understand what it is to be human through the extended abilities that tool use, that objects and their agencies, give to us. The digital tools we use are entangled with and extend humanity in powerful ways - and in 2025, it’s easy to see how digital technologies have extended humanity’s worst impulses.">
   <meta property="og:locale" content="en_us">
   <meta property="og:type" content="article">
     <meta property="article:section" content="syllabus">
@@ -104,11 +102,8 @@ So what I want to know is, can digital archaeology be taught, be learned, be pra
       </header>
       <article>
         <h3 id="the-most-important-idea">The Most Important Idea</h3>
-<p>Archaeology&rsquo;s genesis was in racism, and colonialism.</p>
-<p>Digital technology&rsquo;s birth was in the violence of war, and the control of systems.</p>
-<p>If you put those two things together <em>without taking into account the implications</em> then we&rsquo;re in for a lot of trouble.</p>
-<p>So what I want to know is, can digital archaeology be taught, be learned, be practiced, in such a way that we unpick those two trajectories, those two monstrous births, and use digital archaeology to better understand communities, empower people, and give better, more compelling, more truthful stories about what it means to be human?</p>
-<p>Archaeology isn&rsquo;t necessarily about the past. It&rsquo;s about the materiality of the past <em>and present</em> and in many ways, the future. We try to understand what it is to be human through the extended abilities that tool use, that objects and their agencies, give to us. The digital tools we use and are entangled with extend humanity in powerful ways - and in 2025, it&rsquo;s easy to see how digital technologies have extended humanity&rsquo;s worst impulses.</p>
+<p>\draft\</p>
+<p>Archaeology isn&rsquo;t necessarily about the past. It&rsquo;s about the materiality of the past <em>and present</em> and in many ways, the future. We try to understand what it is to be human through the extended abilities that tool use, that objects and their agencies, give to us. The digital tools we use are entangled with and extend humanity in powerful ways - and in 2025, it&rsquo;s easy to see how digital technologies have extended humanity&rsquo;s worst impulses.</p>
 <div class="admonition admonition-success"><div class="admonition-title">Process over product!</div><div class="admonition-content">
     My goal here is to teach you to use certain digital techs; to unpack and interrogate those techs you learn to use; and to equip you to use these things in a reflective manner. It&rsquo;s about archaeology using computation; but also, looking at computation from an archaeological perspective.
   </div>
@@ -179,12 +174,13 @@ So what I want to know is, can digital archaeology be taught, be learned, be pra
   background: #17a2b8;
 }
 </style>
-<p>It&rsquo;s going to be uncomfortable. Not only that, this is the first iteration of the course. That makes you my <em>accomplices</em>. There will be things we try here that will not work. That&rsquo;s why part of the exit ticket for this course will be for you to rethink the one part of the course that was <em>most affecting</em> for you to make it better, but also, to think through who it might <em>harm</em>.</p>
+<p>It&rsquo;s going to be uncomfortable. There will be things we try here that will not work.</p>
+<p>/draft/</p>
 <h3 id="texttech">Text/Tech</h3>
 <p>To the best of my ability, all materials will either be open access materials on the web or materials made available to us through MacOdrum Library or the University. You will not be required to purchase any set text or software.</p>
 <p>Having a reasonably up-to-date computer will make life easier for you; if you use a chromebook or a low-powered laptop (eg, less than 8 gb of RAM), this will require us to think creatively about some of the work, but should not present an insurmountable obstacle. A good internet connection will make life easier, but I realize that not everyone is well-served by our tech oligopolies. <strong>Please let me know if these situations apply to you</strong> so that we can work out a suitable plan of action.</p>
 <h3 id="class-format">Class format</h3>
-<p>This class will be delivered online, asynchronously. A Discord server will be used to provide a social context to our work, for help, and for collaboration. Learning materials will be curated on this open course website, and might include a variety of modalities. <strong>There will be no required synchronous chats or lectures.</strong> Students will maintain course research notebooks on the web (which may be anonymous or pseudonymous or made private provided access is shared with me).</p>
+<p>This class will be delivered online, asynchronously. Learning materials will be curated on this open course website, and might include a variety of modalities. <strong>There will be no required synchronous chats or lectures.</strong> Students will maintain course research notebooks on the web (which may be anonymous or pseudonymous or made private provided access is shared with me).</p>
 <h3 id="why">Why?</h3>
 <p>I&rsquo;ve taught online for a variety of institutions, using a variety of formats and approaches. I like teaching asnchronously because I believe it is a kinder approach to complex topics, especially when there is a second layer of difficulty - basic digital literacy, in this case - which intersects with the content, my learning goals for you, your own personal situations - in ways I cannot always anticipate or know.</p>
 <p>Since I cannot know these things, I do not believe that I should bludgeon you with content; I do not think that &lsquo;rigour&rsquo; is demonstrated by forcing you to join me at set times; I do not believe that face-to-face work is somehow more &lsquo;scholarly&rsquo; than other kinds of work. Right now, with the world the way it is, I want to build a structure that opens possibility space for you to engage with this topic, and with &lsquo;digital archaeology&rsquo; when you encounter it beyond this course, in ways that will push you forward as a scholar and citizen.</p>
@@ -196,6 +192,84 @@ So what I want to know is, can digital archaeology be taught, be learned, be pra
 <li>We don&rsquo;t often talk about death in modern Western culture. Memorialization and its practices can reveal much about past human groups, but in the gaps with our present day, it can also teach us much about ourselves.</li>
 </ol>
 <p>&hellip;and that is why this course is the way it is. No doubt, things will break, and some things will work better/be more effective than others. We will roll with it.</p>
+<h3 id="ai">AI</h3>
+<p>If you went to a gym, and there was a machine that lifted weights up and down for you, could you say that you&rsquo;ve had a work-out, if the machine moved the weights around? Because isn&rsquo;t that the point of a gym: moving weights from A to B? So a machine would be more efficient, and better at it?</p>
+<p>That sound you hear is of a point being missed. The correct answer is, &rsquo;no&rsquo;. The correct answer is, we lift the weights so that our muscles undergo the process of strengthening, conditioning, developing.</p>
+<p>In the same way, the use of any generative AI system to create written work in this class is a pointless stupid thing to do. In the same way having a machine lift weights for you misses the point, so too does having a machine generate statistical chains of plausible bullshit. <em>You&rsquo;re in university to develop your mind</em>, not to have a stack of papers on your desk.</p>
+<div class="admonition admonition-success"><div class="admonition-title">Process Is The Point</div><div class="admonition-content">
+    <p>You lift weights so that your body undergoes the process. The process is the point. You write to train your mind to think, to put your mind through a process.</p>
+<p>The point was never to have x number of things-written. Yet, many people seem to treat university as the accumulation of papers in exchange for a piece of paper. That is profoundly sad.</p>
+  </div>
+</div>
+<style>
+.admonition {
+  margin: 1.5em 0;
+  padding: 0;
+  border-left: 4px solid;
+  border-radius: 4px;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+  overflow: hidden;
+}
+
+.admonition-title {
+  font-weight: bold;
+  padding: 0.75em 1em;
+  margin: 0;
+  color: white;
+}
+
+.admonition-content {
+  padding: 1em;
+  background: #f8f9fa;
+}
+
+.admonition-content p:last-child {
+  margin-bottom: 0;
+}
+
+ 
+.admonition-note {
+  border-color: #3498db;
+}
+.admonition-note .admonition-title {
+  background: #3498db;
+}
+
+ 
+.admonition-warning {
+  border-color: #f39c12;
+}
+.admonition-warning .admonition-title {
+  background: #f39c12;
+}
+
+ 
+.admonition-danger, .admonition-error {
+  border-color: #e74c3c;
+}
+.admonition-danger .admonition-title, .admonition-error .admonition-title {
+  background: #e74c3c;
+}
+
+ 
+.admonition-success, .admonition-tip {
+  border-color: #27ae60;
+}
+.admonition-success .admonition-title, .admonition-tip .admonition-title {
+  background: #27ae60;
+}
+
+ 
+.admonition-info {
+  border-color: #17a2b8;
+}
+.admonition-info .admonition-title {
+  background: #17a2b8;
+}
+</style>
+<p>Archaeology has long used machine learning, simulation, and other kinds of complex modeling. I&rsquo;ll teach you how to build something real, using machine learning, artificial neural networks and so on. There will be times when I explicitly show you how various <em>kinds</em> of AI work. <strong>THOSE ARE THE ONLY TIMES</strong> and contexts in which it will be ok to work with generative AI.</p>
+<p>Lift the weights for yourself. Anything else is&hellip; point-less. Null points. 0.</p>
+<p>(I&rsquo;ve written two books on artificial intelligence in archaeology. I know what I&rsquo;m talking about.)</p>
 
       </article>
       
