--- a/schedule/index.html
+++ b/schedule/index.html
@@ -9,8 +9,10 @@
 <meta property="og:url" content="https://shawngraham.github.io/digiarch/schedule/">
   <meta property="og:site_name" content="CLCV3000|HIST3000A: An Introduction to Digital Archaeology">
   <meta property="og:title" content="Schedule">
-  <meta property="og:description" content="Three modules
-Module 1|Module 2|Module 3">
+  <meta property="og:description" content="Each week, you have tasks, readings, and or things to listen to/watch that I would like you to complete. These should be done -or at least attempted- before moving onto the next week.
+These modules roughly map onto the sequence of work in an archaeological project.
+Module 1: Capturing|Creating Data Module 2: Considering|Calculating Module 3: Communicating Module 1 September 8 - October 3
+Week 1: Sept 8 - Sept 12 Getting Your Digital Workspace Set Up Week 2: Sept 15 - Sept 19 Field Work: The Graveyard Project Week 3: Sept 22 - Sept 26 Field Work: Data Collection Issues and Representations Week 4: Sept 29 - Oct 3.">
   <meta property="og:locale" content="en_us">
   <meta property="og:type" content="website">
 
@@ -82,8 +84,45 @@ Module 1|Module 2|Module 3">
   </nav>
 
     </div>
-    <p>Three modules</p>
-<p><a href="module1">Module 1</a>|<a href="module2">Module 2</a>|<a href="module3">Module 3</a></p>
+    <p>Each week, you have tasks, readings, and or things to listen to/watch that I would like you to complete. These should be done -or at least attempted- before moving onto the next week.</p>
+<p>These modules roughly map onto the sequence of work in an archaeological project.</p>
+<ul>
+<li><a href="#module1">Module 1</a>: Capturing|Creating Data</li>
+<li><a href="#module2">Module 2</a>: Considering|Calculating</li>
+<li><a href="#module3">Module 3</a>: Communicating</li>
+</ul>
+<h1 id="module-1">Module 1</h1>
+<p><a name="module1"></a>
+September 8 - October 3</p>
+<ul>
+<li>Week 1: Sept 8 - Sept 12 <a href="wk1">Getting Your Digital Workspace Set Up</a></li>
+<li>Week 2: Sept 15 - Sept 19 <a href="wk2">Field Work: The Graveyard Project</a></li>
+<li>Week 3: Sept 22 - Sept 26 <a href="wk3">Field Work: Data Collection Issues and Representations</a></li>
+<li>Week 4: Sept 29 - Oct 3. <strong>Consolidation Week</strong></li>
+</ul>
+<h1 id="module-2">Module 2</h1>
+<p><a name="module2"></a>
+October 6 - October 31</p>
+<ul>
+<li>Week 5: Oct 6 - Oct 10</li>
+<li>Week 6: Oct 14 - Oct 17 (Thanksgiving happens this week)
+<strong>READING WEEK</strong> Oct 20 - 24</li>
+<li>Week 7: Oct 27 - Oct 31 <strong>Consolidation Week</strong></li>
+</ul>
+<h1 id="module-3">Module 3</h1>
+<p><a name="module3"></a>
+November 3 - November 28</p>
+<ul>
+<li>Week 8: Nov 3 - Nov 7</li>
+<li>Week 9: Nov 10 - Nov 14</li>
+<li>Week 10: Nov 17 - Nov 21</li>
+<li>Week 11: Nov 24 - Nov 28 <strong>Consolidation Week</strong></li>
+</ul>
+<h1 id="exit-ticket">Exit Ticket</h1>
+<p>December 1 - December 5</p>
+<ul>
+<li>Week 12: Dec 1 - Dec 5 <strong>Submit Exit Ticket</strong></li>
+</ul>
 
     
     
