--- a/materials/wk1-jupyterlite/index.html
+++ b/materials/wk1-jupyterlite/index.html
@@ -236,6 +236,11 @@
     </div>
     <div class="col-md text-md-end">
         
+        <a href="https://shawngraham.github.io/digiarch/materials/wk1-making-notes/">
+            <span>next: </span>
+            <span>Week 1: Making Notes</span>
+        </a>
+        
     </div>
 </div>
     </div>
