--- a/schedule/index.html
+++ b/schedule/index.html
@@ -11,8 +11,7 @@
   <meta property="og:title" content="Schedule">
   <meta property="og:description" content="Each week, you have tasks, readings, and or things to listen to/watch that I would like you to complete. These should be done -or at least attempted- before moving onto the next week.
 These modules roughly map onto the sequence of work in an archaeological project.
-Module 1: Capturing|Creating Data Module 2: Considering|Calculating Module 3: Communicating Module 1 September 8 - October 3
-Week 1: Sept 8 - Sept 12 Getting Your Digital Workspace Set Up Week 2: Sept 15 - Sept 19 Field Work: The Graveyard Project Week 3: Sept 22 - Sept 26 Field Work: Data Collection Issues and Representations Week 4: Sept 29 - Oct 3.">
+Module 1: Capturing|Creating Data Module 2: Considering|Calculating Module 3: Communicating You Don’t Have To Be Techy! I don’t even know what ’techy’ means. You just have to be curious.">
   <meta property="og:locale" content="en_us">
   <meta property="og:type" content="website">
 
@@ -85,6 +84,12 @@ Week 1: Sept 8 - Sept 12 Getting Your Digital Workspace Set Up Week 2: Sept 15 -
 <li><a href="#module2">Module 2</a>: Considering|Calculating</li>
 <li><a href="#module3">Module 3</a>: Communicating</li>
 </ul>
+<h2 id="you-dont-have-to-be-techy">You Don&rsquo;t Have To Be Techy!</h2>
+<p>I don&rsquo;t even know what &rsquo;techy&rsquo; means. You just have to be curious. If you&rsquo;re curious, you&rsquo;ll be ok. The poet Allison Parrish once wrote,</p>
+<blockquote>
+<p>[I] think a fundamental problem is that computers (especially tablets/phones) nowadays are designed to “de-skill,” because it’s much more difficult to monetize users who, like, actually know how their computers work and have the expectation that they should be able to independently control a computer’s function. the culture surrounding computation compounds the problem—I have students who don’t believe they CAN learn how computers work, because they’re not ‘that kind of person.’ (via <a href="mailto:aparrish@friend.camp">aparrish@friend.camp</a> 21 December 2024).</p>
+</blockquote>
+<p>Just breathe, take it one step at a time, and you&rsquo;ll be <strong>amazed</strong> at what you can do.</p>
 <h1 id="module-1">Module 1</h1>
 <p><a name="module1"></a>
 September 8 - October 3</p>
