--- a/syllabus/index.html
+++ b/syllabus/index.html
@@ -12,7 +12,7 @@
   <meta property="og:description" content="The syllabus is not a contract, but rather a guide to what and how I teach.
 Read the damned thing The most successful students are the ones who have actually read the syllabus, and who have asked questions about it. After you read this page, move onto the general philosophical underpinnings of this course.
 The complete syllabus is made up of these pages:
-General Philosophy : why this course looks the way it does Learning Outcomes &amp; My Policies : what you’ll learn and how I handle that Official Carleton Policies : general policies germane to every course Assessment Pieces : what actually gets assessed Contacting Dr.">
+General Philosophy : why this course looks the way it does Learning Outcomes &amp; My Policies : what you’ll learn and how I handle that Official Carleton Policies : general policies germane to every course Assessment Pieces : what actually gets assessed You Don’t Have To Be Techy!">
   <meta property="og:locale" content="en_us">
   <meta property="og:type" content="website">
 
@@ -157,7 +157,13 @@ General Philosophy : why this course looks the way it does Learning Outcomes &am
 <li><a href="syllabus-4">Official Carleton Policies</a> : general policies germane to every course</li>
 <li><a href="assessment">Assessment Pieces</a> : what actually gets assessed</li>
 </ul>
-<h3 id="contacting-dr-graham">Contacting Dr. Graham</h3>
+<h2 id="you-dont-have-to-be-techy">You Don&rsquo;t Have To Be Techy!</h2>
+<p>I don&rsquo;t even know what &rsquo;techy&rsquo; means. You just have to be curious. If you&rsquo;re curious, you&rsquo;ll be ok. The poet Allison Parrish once wrote,</p>
+<blockquote>
+<p>[I] think a fundamental problem is that computers (especially tablets/phones) nowadays are designed to “de-skill,” because it’s much more difficult to monetize users who, like, actually know how their computers work and have the expectation that they should be able to independently control a computer’s function. the culture surrounding computation compounds the problem—I have students who don’t believe they CAN learn how computers work, because they’re not ‘that kind of person.’ (via <a href="mailto:aparrish@friend.camp">aparrish@friend.camp</a> 21 December 2024).</p>
+</blockquote>
+<p>Just breathe, take it one step at a time, and you&rsquo;ll be <strong>amazed</strong> at what you can do.</p>
+<h2 id="contacting-dr-graham">Contacting Dr. Graham</h2>
 <p>My details are in the navigation bar above, but you can also find me in PA 406 (my office) or PA 435-439 (the XLab) or in the library coffee shop, especially on Wednesday mornings. You&rsquo;ll know me: I&rsquo;m the middle-aged bald guy sitting at the long table with a Mac air covered in stickers (you&rsquo;ll know you&rsquo;ve got the right guy if you see a sticker placed centrally with a stylized white &lsquo;T&rsquo; in a blue circle.)</p>
 <p>shawn dot graham at carleton dot ca</p>
 <p>If you wish to email me, be warned that I get <em>a lot</em> of email, and have several filters in place in self-defense. To defeat my filters, please observe the following style:</p>
