--- a/schedule/wk1/index.html
+++ b/schedule/wk1/index.html
@@ -94,17 +94,20 @@
         </div>
       </header>
       <article>
-        <p>Each week, I will lay out goals for things I want you to pay attention to, I will give you something to listen to, and I will give you things to read, and things to do.</p>
-<p>Our overarching goal this week is to set up your digital archaeology workflow. This involves creating a place to lodge your materials (a data repository via Github), a place to make notes and explore code (we&rsquo;re going to use a thing called JupyterLite), and a way of being social with your community of nascent digital archaeologists (a social annotation layer for the web called Hypothes.is)</p>
-<h2 id="you-dont-have-to-be-techy">You Don&rsquo;t Have To Be Techy!</h2>
-<p>I don&rsquo;t even know what &rsquo;techy&rsquo; means. You just have to be curious. If you&rsquo;re curious, you&rsquo;ll be ok. The poet Allison Parrish once wrote,</p>
-<blockquote>
-<p>[I] think a fundamental problem is that computers (especially tablets/phones) nowadays are designed to “de-skill,” because it’s much more difficult to monetize users who, like, actually know how their computers work and have the expectation that they should be able to independently control a computer’s function. the culture surrounding computation compounds the problem—I have students who don’t believe they CAN learn how computers work, because they’re not ‘that kind of person.’ (via <a href="mailto:aparrish@friend.camp">aparrish@friend.camp</a> 21 December 2024).</p>
-</blockquote>
-<p>Just breathe, take it one step at a time, and you&rsquo;ll be <strong>amazed</strong> at what you can do.</p>
-<hr>
+        <ul>
+<li><a href="#goals">Goals</a></li>
+<li><a href="#listen">Listen</a></li>
+<li><a href="#read">Read</a></li>
+<li><a href="#do">Do</a></li>
+<li><a href="#reflect">Reflect</a></li>
+<li><a href="#report">Report Back</a></li>
+</ul>
 <h2 id="goals-for-this-week">Goals for this week</h2>
-<p>This week is about getting set up and situated, including using a custom platform I have built for note-making. You might already have a system you use for making notes and keeping track of things, which is good. But for this course, I want you to engage with my system because it intersects with broader issues around open access research, replicability, and knowledge-making that I want you to learn.</p>
+<p><a name="goals"></a></p>
+<p>Our overarching goal starting up is to set up your digital archaeology workflow, and to map out some of the broad contours of &lsquo;digital archaeology&rsquo;.</p>
+<p>Getting the workflow set up involves creating a place to lodge your materials (a data repository via Github), a place to make notes and explore code (we&rsquo;re going to use a thing called JupyterLite), and a way of being social with your community of nascent digital archaeologists (a social annotation layer for the web called Hypothes.is).</p>
+<p>You might already have a system you use for making notes and keeping track of things, which is good. But for this course, I want you to engage with my system because it intersects with broader issues around open access research, replicability, and knowledge-making in digital archaeology that I want you to learn.</p>
+<p>Therefore, this week our goals are:</p>
 <ul>
 <li>understanding what the hang you&rsquo;ve signed up for</li>
 <li>getting a sense of what digital archaeology is; also, the importance of a space where it is &lsquo;safe to fail&rsquo;</li>
@@ -112,7 +115,13 @@
 <li>getting your collaborative reading environment with Hypothes.is set up</li>
 <li>exploring our JupyterLite digital notemaking and analytical environment</li>
 </ul>
+<h2 id="listen">Listen</h2>
+<p><a name="listen"></a></p>
+<iframe src="https://anchor.fm/hist3814o/embed/episodes/HIST3000CLCV3000-Getting-Comfortable-ehpc8o" height="102px" width="400px" frameborder="0" scrolling="no"></iframe>
+<p><a href="https://abbymullen.org/how-to-listen-to-a-podcast-for-class/">Advice on how to listen to a podcast for a class</a>. It&rsquo;s not as straightforward as you might think.</p>
+<p>Each week, this podcast interviews a different digital archaeologist. These interviews were conducted a while ago. One thing I want you to ask yourself therefore is &lsquo;how might things have changed in the interim?&rsquo; Listen for key words and phrases. A good idea would be to use <a href="https://openalex.org/">OpenAlex</a>, <a href="https://scholar.google.com/">Google Scholar</a>, <a href="https://proxy.library.carleton.ca/login?qurl=https%3A%2F%2Fwww.jstor.org%2F">JSTOR</a>, or <a href="https://library.carleton.ca/">our library</a> to search these terms to find articles from the last five years that are germane.</p>
 <h2 id="do">DO</h2>
+<p><a name="do"></a></p>
 <ul>
 <li>Listen to the podcast</li>
 <li>Follow the instructions to get <a href="../../materials/wk1-github">Github</a> and <a href="../../materials/wk1-hypothesis">Hypothes.is</a> set up</li>
@@ -122,28 +131,12 @@
 <li>I ask you to do this so that you get familiar with the hypothesis workflow. Notice that any annotation you make gets its own unique permanent link, so you can link to it in any notes or writing you do. Notice that you can also responde to <strong>anyone else&rsquo;s</strong> annotation.</li>
 </ul>
 </li>
-<li>Read the readings using Hypothesis to respond to the readings, as per the Hypothesis instructions</li>
-<li>Our <a href="../../materials/wk1-jupyterlite">lab environment</a> has a tutorial about how to make notes in it. Follow that tutorial, and then make notes in our lab environment to create individual reading summaries; link to individual annotations in those notes</li>
+<li>Our <a href="../../materials/wk1-jupyterlite">lab environment</a> has a getting started tutorial. Follow that tutorial, and then make notes in our lab environment to create individual reading summaries; link to individual annotations in those notes</li>
+<li>Read the readings. Have Hypothes.is turn on so you can make similar annotations, or respond to others&rsquo; observations. <a href="../../materials/wk1-making-notes">Make notes</a>.</li>
 <li>Log your reflection in your appropriate github repository</li>
 </ul>
-<p>Checklist:</p>
-<ul>
-<li><input disabled="" type="checkbox"> Github account set up; an initial private repository made called &lsquo;week1&rsquo;</li>
-<li><input disabled="" type="checkbox"> user &lsquo;shawngraham&rsquo; invited to the repository</li>
-<li><input disabled="" type="checkbox"> hypothes.is account made</li>
-<li><input disabled="" type="checkbox"> initial annotations on the course website made</li>
-<li><input disabled="" type="checkbox"> podcast listened to</li>
-<li><input disabled="" type="checkbox"> notes on readings</li>
-<li><input disabled="" type="checkbox"> digital lab environment explored and initial wikilinked notes made there</li>
-<li><input disabled="" type="checkbox"> initial log on the week&rsquo;s work deposited in your github repo</li>
-<li><input disabled="" type="checkbox"> Dr. Graham notified</li>
-</ul>
-<p>I know this seems like a lot. But really, this is mostly just setting things up. By the time this week is done, you&rsquo;ll have your own personal digital archaeology laboratory!</p>
-<h2 id="listen">Listen</h2>
-<iframe src="https://anchor.fm/hist3814o/embed/episodes/HIST3000CLCV3000-Getting-Comfortable-ehpc8o" height="102px" width="400px" frameborder="0" scrolling="no"></iframe>
-<p><a href="https://abbymullen.org/how-to-listen-to-a-podcast-for-class/">Advice on how to listen to a podcast for a class</a>. It&rsquo;s not as straightforward as you might think.</p>
-<p>Each week, this podcast interviews a different digital archaeologist. These interviews were conducted a while ago. One thing I want you to ask yourself therefore is &lsquo;how might things have changed in the interim?&rsquo; Listen for key words and phrases. A good idea would be to use <a href="https://openalex.org/">OpenAlex</a>, <a href="https://scholar.google.com/">Google Scholar</a>, <a href="https://proxy.library.carleton.ca/login?qurl=https%3A%2F%2Fwww.jstor.org%2F">JSTOR</a>, or <a href="https://library.carleton.ca/">our library</a> to search these terms to find articles from the last five years that are germane.</p>
 <h2 id="readings-to-set-the-scene">Readings to set the scene</h2>
+<p><a name="readings"></a></p>
 <ul>
 <li>Morgan, Colleen. 2022. Current Digital Archaeology. <em>Annual Review of Anthropology</em> 51:213-31. <a href="../../static/annurev-anthro-041320-114101.pdf">link</a></li>
 <li>Cook, Katherine. 2019. EmoboDIYing Disruption: Queer, Feminist &amp; Inclusive Digital Archaeologies. European Journal of Archaeology 22 (Special Issue 3 Digital Archaeologies): 398-414.  DOI: <a href="https://doi.org/10.1017/eaa.2019.23">https://doi.org/10.1017/eaa.2019.23 </a> <a href="https://via.hypothes.is/https://www.cambridge.org/core/journals/european-journal-of-archaeology/article/embodiying-disruption-queer-feminist-and-inclusive-digital-archaeologies/2D0B1F0D892CACE6782FC11EF46548BA/core-reader">full text</a></li>
@@ -151,6 +144,7 @@
 <li>Bollwerk, Elizabeth. 2015. Co-Creation’s Role in Digital Public Archaeology. Advances in Archaeological Practice 3.3, 223-234  <a href="https://doi.org/10.7183/2326-3768.3.3.223">https://doi.org/10.7183/2326-3768.3.3.223</a> <a href="https://via.hypothes.is/https://www.cambridge.org/core/services/aop-cambridge-core/content/view/9213F22B1FA891D11262BE3F49376C0E/S2326376800000486a.pdf/cocreations_role_in_digital_public_archaeology.pdf">pdf</a></li>
 </ul>
 <h2 id="record-and-reflect">Record and Reflect</h2>
+<p><a name="reflect"></a></p>
 <p>Your github repository is where you will deposit all of the artefacts you make for this course, including your reflections. Depositing everything you make gives me a vision of your process and learning, so I encourage you to be expansive.</p>
 <p><strong>Make sure to &lsquo;invite user shawngraham&rsquo;</strong> to your repository so that I may view it.</p>
 <ol>
@@ -166,6 +160,20 @@
 <p>Going beyond the mere mechanical aspects of getting started, draw on your annotations of what you’ve read (and/or your notes from what you’ve listened to), discuss your idea of what ‘digital archaeology&rsquo; might be prior to starting this course, and think through whether any of the materials we’ve seen this week confirm or upset those notions. What kind of archaeology have you encountered so far at Carleton, if at all? Where do you want to go, with digital archaeology?</p>
 <p>In Jupyterlite, run the &lsquo;Visualize Connections&rsquo; .ipynb file, and take a screenshot of how your notes all interconnect (Mac users can hit cmd+4 to draw a square around the area they want to screenshot and take it; Windows users look for your &lsquo;snipping tool&rsquo;). Upload that image to your repository.</p>
 <h3 id="log-your-work">Log Your Work</h3>
+<p><a name="report"></a></p>
+<p>Checklist:</p>
+<ul>
+<li><input disabled="" type="checkbox"> Github account set up; an initial private repository made called &lsquo;week1&rsquo;</li>
+<li><input disabled="" type="checkbox"> user &lsquo;shawngraham&rsquo; invited to the repository</li>
+<li><input disabled="" type="checkbox"> hypothes.is account made</li>
+<li><input disabled="" type="checkbox"> initial annotations on the course website made</li>
+<li><input disabled="" type="checkbox"> podcast listened to</li>
+<li><input disabled="" type="checkbox"> notes on readings</li>
+<li><input disabled="" type="checkbox"> digital lab environment explored and initial wikilinked notes made there</li>
+<li><input disabled="" type="checkbox"> initial log on the week&rsquo;s work deposited in your github repo</li>
+<li><input disabled="" type="checkbox"> Dr. Graham notified</li>
+</ul>
+<p>I know this seems like a lot. But really, this is mostly just setting things up. By the time this week is done, you&rsquo;ll have your own personal digital archaeology laboratory!</p>
 <p>You can log the link to your repository <a href="https://forms.gle/XLpFTRXxknJ4RSbS7">in this form</a>.</p>
 
       </article>
