--- a/schedule/wk1/index.html
+++ b/schedule/wk1/index.html
@@ -136,7 +136,7 @@
 <li>Log your reflection in your appropriate github repository</li>
 </ul>
 <h2 id="readings-to-set-the-scene">Readings to set the scene</h2>
-<p><a name="readings"></a></p>
+<p><a name="read"></a></p>
 <ul>
 <li>Morgan, Colleen. 2022. Current Digital Archaeology. <em>Annual Review of Anthropology</em> 51:213-31. <a href="../../static/annurev-anthro-041320-114101.pdf">link</a></li>
 <li>Cook, Katherine. 2019. EmoboDIYing Disruption: Queer, Feminist &amp; Inclusive Digital Archaeologies. European Journal of Archaeology 22 (Special Issue 3 Digital Archaeologies): 398-414.  DOI: <a href="https://doi.org/10.1017/eaa.2019.23">https://doi.org/10.1017/eaa.2019.23 </a> <a href="https://via.hypothes.is/https://www.cambridge.org/core/journals/european-journal-of-archaeology/article/embodiying-disruption-queer-feminist-and-inclusive-digital-archaeologies/2D0B1F0D892CACE6782FC11EF46548BA/core-reader">full text</a></li>
