--- a/schedule/wk1/index.html
+++ b/schedule/wk1/index.html
@@ -131,8 +131,8 @@
 <li>I ask you to do this so that you get familiar with the hypothesis workflow. Notice that any annotation you make gets its own unique permanent link, so you can link to it in any notes or writing you do. Notice that you can also responde to <strong>anyone else&rsquo;s</strong> annotation.</li>
 </ul>
 </li>
-<li>Our <a href="../../materials/wk1-jupyterdesktop">lab environment</a> has a getting started tutorial. Follow that tutorial, and then make notes in our lab environment to create individual reading summaries; link to individual annotations in those notes</li>
-<li>Read the readings. Have Hypothes.is turn on so you can make similar annotations, or respond to others&rsquo; observations. <a href="../../materials/wk1-making-notes">Make notes</a>.</li>
+<li>Install our <a href="../../materials/wk1-jupyterdesktop">lab bench environment</a>. It has a bundled getting started tutorial that explains what the lab bench does, and how it works. Complete that tutorial.</li>
+<li>Read the readings. Have Hypothes.is turn on so you can make similar annotations, or respond to others&rsquo; observations. <a href="../../materials/wk1-making-notes">Make notes</a> on the readings in your lab-bench. How many? That&rsquo;s up to you. Better note-making and linked thinking leads to better grades, ultimately.</li>
 <li>Log your reflection in your appropriate github repository</li>
 </ul>
 <h2 id="readings-to-set-the-scene">Readings to set the scene</h2>
